migrate single function

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -145,7 +145,10 @@ set(libdevilutionx_SRCS
   storm/storm_net.cpp
   storm/storm_svid.cpp
   miniwin/misc_msg.cpp
-  platform/locale.cpp)
+  platform/locale.cpp
+  # Changes made for rust
+  bridge_scaffold/bridge_scaffold.cpp
+  )
 
 if(IOS)
   list(APPEND libdevilutionx_SRCS platform/ios/ios_paths.m)
@@ -196,8 +199,9 @@ if(DISCORD_INTEGRATION)
 endif()
 
 add_devilutionx_library(libdevilutionx OBJECT ${libdevilutionx_SRCS})
+target_include_directories(rust_devil INTERFACE "${DevilutionX_SOURCE_DIR}/Source")
 
-target_include_directories(libdevilutionx PUBLIC ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/rust_devil)
+
 
 # Use file GENERATE instead of configure_file because configure_file
 # does not support generator expressions.
@@ -232,7 +236,7 @@ target_link_libraries(libdevilutionx PUBLIC
   libsmackerdec
   simpleini::simpleini
   hoehrmann_utf8
-  rust_devil
+  rust_bridge
 )
 
 if(NOT NONET)
